modules/aws-vpc/eip.tf
resource "aws_eip" "TERRVPC_EIP_1" {
    vpc = true
}
resource "aws_eip" "TERRVPC_EIP_2" {
    vpc = true
}
